GNOME Bugzilla – Bug 749175
highlight engine is not invalidating properly
Last modified: 2018-01-11 09:48:50 UTC
in a file that has clang semantic highlighting support (autotools w/ .c file), we are not invalidating things correctly. For example: #include <alloca.h> allocation ^^^^^^ is getting highlighted. I *think* the issue is because the old tag is not getting properly removed.
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gnome-builder/issues/25.