highlight: Fix issue with highligh engine not invalidating previously added tags.

https://bugzilla.gnome.org/show_bug.cgi?id=749175